[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Spirit.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.0158, 31.4352 )

[node name="Spirit" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="SelectedSprite" type="Polygon2D" parent="."]
visible = false
color = Color( 0.239216, 0.541176, 0.831373, 0.435294 )
polygon = PoolVector2Array( 0.131401, -51.305, -23.8117, -49.5531, -41.331, -42.5453, -44.5429, -38.4575, -50.3826, -24.442, -51.5506, -8.09067, -49.2147, 10.5966, -43.3749, 33.0797, -34.6153, 47.9712, -0.452576, 51.475, 27.5783, 42.1314, 45.3896, 25.196, 54.4413, -3.71084, 49.4775, -29.6978, 25.8264, -45.4652 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RollTimer" type="Timer" parent="."]
process_mode = 0
[connection signal="timeout" from="RollTimer" to="." method="_on_RollTimer_timeout"]
